# yandex-scripts

./: .env.sample  .gitignore  Dockerfile  README.md  docer-compose.yml  main.py  pyproject.toml  requirements.txt
yandex/: __init__.py  consumer.py  log_settings.py  main.py  producer.py  settings.py
yandex/clients/: __init__.py  baseclient.py  db.py  fake_clients.py  webdav.py
yandex/errors/: errors.py
yandex/resources/: constants.py
yandex/schemas/: files.py
yandex/workers/: __init__.py  converter.py  deleter.py  renamer.py
